Made product search to be calculated in parallel using virtual threads